// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders correctly 1`] = `
<div
  className="container"
>
  <input
    defaultChecked={false}
    type="radio"
    value={true}
  />
  <div
    className="element"
  />
  <label>
    Example
  </label>
</div>
`;

exports[`RadioButton when disabled prop is true renders correctly 1`] = `
<div
  className="container disabled"
>
  <input
    defaultChecked={false}
    disabled={true}
    type="radio"
    value={true}
  />
  <div
    className="element"
  />
  <label>
    Example
  </label>
</div>
`;
